apps/base/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8123
  type: ClusterIP
